Fixed white space around hamburger

--- a/_assets/stylesheets/_partials/site-header.scss
+++ b/_assets/stylesheets/_partials/site-header.scss
@@ -128,6 +128,7 @@ button#header-toggle {
 }
 
 div.collapsible {
+  width: 100%;
   z-index: 4;
 
   background-color: #333333;
